--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.2",
-    "@primer/css": "^17.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,7 +12,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
+    "dotenv": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "immutable": "^4.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,6 +31,7 @@
     "test": "craco test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://127.0.0.1:8088",
   "eslintConfig": {
     "extends": [
       "react-app",
