--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "stylelint-config-prettier": "^8.0.2",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^4.1.2",
