--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,10 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"]
+  "plugins": ["react", "@typescript-eslint"],
+  "rules": {
+    "no-unused-vars": "off"
+  }
   //    "rules": {
   //        "indent": [
   //            "error",
