--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +15,7 @@
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.5",
     "axios": "^0.24.0",
     "dotenv": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
@@ -17,10 +23,9 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
     "stylelint-config-prettier": "^8.0.2",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^4.1.2",
@@ -53,7 +58,6 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.1.2",
-
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "autoprefixer": "^9",
@@ -67,7 +71,6 @@
     "prettier": "2.3.2",
     "style-loader": "^3.0.0",
     "stylelint": "^13.13.1",
-    "stylelint-config-primer": "^11.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
