--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.24.0",
     "dotenv": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "formik": "^2.2.9",
     "immutable": "^4.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -29,7 +30,8 @@
     "stylelint-config-prettier": "^8.0.2",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "craco start",
