--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.5.1",
+    "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.3.0",
-    "@mui/material": "^5.3.0",
+    "@mui/material": "^5.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,16 +20,13 @@
     "axios": "^0.24.0",
     "dotenv": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
-    "formik": "^2.2.9",
     "immutable": "^4.0.0",
-    "node-sass": "^6.0.1",
+    "postcss-scss": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "stylelint-config-prettier": "^8.0.2",
-    "tailwindcss-cli": "^0.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
@@ -62,17 +60,14 @@
     "@craco/craco": "^6.1.2",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
-    "autoprefixer": "^9",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^5.2.6",
     "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.24.0",
-    "postcss": "^7",
     "prettier": "2.3.2",
-    "style-loader": "^3.0.0",
-    "stylelint": "^13.13.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "sass": "^1.49.4",
+    "style-loader": "^3.0.0"
   }
 }
