--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "^8.3.0",
     "immutable": "^4.0.0",
     "postcss-scss": "^4.0.3",
+    "promise-file-reader": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
