--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-image-crop": "^9.0.8",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "urlcat": "^2.0.4",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
