--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-image-crop": "^8.1.3",
     "axios": "^0.24.0",
     "dotenv": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
@@ -24,8 +25,9 @@
     "promise-file-reader": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^4.0.1",
     "react-helmet": "^6.1.0",
-    "react-image-crop": "^9.0.8",
+    "react-image-crop": "^9.1.1",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
