--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "promise-file-reader": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.0",
     "react-easy-crop": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-image-crop": "^9.1.1",
+    "react-markdown": "^8.0.0",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.1.2",
     "urlcat": "^2.0.4",
     "web-vitals": "^1.0.1",
