--- a/package.json
+++ b/package.json
@@ -74,7 +74,12 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "2.3.2",
+    "react-error-overlay": "6.0.9",
     "sass": "^1.49.4",
     "style-loader": "^3.0.0"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
