--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "remark-gfm": "^3.0.1",
-    "typescript": "^4.1.2",
+    "typescript": "4.4.4",
     "urlcat": "^2.0.4",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
