--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "sass": "^1.49.4",
     "style-loader": "^3.0.0"
   },
+  "proxy": "http://127.0.0.1:8089",
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
     "react-error-overlay": "6.0.9"
