--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-image-crop": "^8.1.3",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "dotenv": "^12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "immutable": "^4.0.0",
