--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "prettier": "2.3.2",
     "react-error-overlay": "6.0.9",
     "sass": "^1.49.4",
-    "style-loader": "^3.0.0"
+    "style-loader": "^3.0.0",
+    "workbox-webpack-plugin": "^6.5.2"
   },
   "proxy": "http://127.0.0.1:28089",
   "resolutions": {
